# bipvopentwins

./: .gitignore
Unity/Assets/: BIMNavigator.cs
Unity/Assets/Scenes/: SampleScene.unity
Unity/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Unity/Franklin/Assets/: BIMNavigator.cs  CenterMainCameraWithObject.cs  ChangeInfo.cs  ColorChanger.cs  ColorVoltage.cs  DisableKeyboardInput.cs  MouseObjectRotator.cs  ObjectExplorer.cs  VoltageColorChanger.cs
Unity/Franklin/Assets/Scenes/: MouseObjectController.cs  SampleScene.unity
Unity/Franklin/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Unity/Franklin/Assets/Settings/Build Profiles/: New Web Profile.asset
Unity/Franklin/BuildWeb/: index.html
Unity/Franklin/ProjectSettings/: ProjectSettings.asset
Unity/Franklin/Temp/: PlayerBuildAnalyticsEvents.json  compute-shader-stripping.json  shader-stripping.json  workerlic
Unity/Franklin/Temp/EditorBuildOutput/: UnityLinkerToEditorData.json
Unity/Franklin/Temp/__Backupscenes/: 0.backup
Unity/Franklin/UserSettings/: Search.settings
Unity/Franklin/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-6000.dwlt
src/: .dockerignore  CarDT.py  Digital Twin prototype OPTIMISED PV prediction_V2-1MIN_OLS.ipynb  PVDataSender.py  bipv_api.py  configmap.yaml  dockerfile  ingress.yaml  ols_model.pkl  pyproject.toml  schemas.py  service.yaml
