[tool.poetry]
name = "bipv-api"
version = "0.1.0"
description = "api for bipv opentwins app"
authors = ["nicolo molinari <nicolo.molinari@supsi.ch>"]
readme = "README.md"
packages = [
    { include = "bipv_api", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.120.1,<0.121.0"
uvicorn = ">=0.38.0,<0.39.0"
gunicorn = ">=23.0.0,<24.0.0"
influxdb = ">=5.3.2,<6.0.0"
pandas = ">=2.3.3,<3.0.0"
scikit-learn = ">=1.7.2,<2.0.0"
pickle-mixin = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = ">=8.4.2,<9.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
